Mise a jour et affichage des images

--- a/HTML/2020-2021.html
+++ b/HTML/2020-2021.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1> 2020-2021 </h1>
-<h3>Jeu de société : Magic Di Rosa</h3>
+<h3>Jeu de societe : Magic Di Rosa</h3>
 <!--3 fichier dont le gdd et 2 img-->
 
 <h3>Ataraxy </h3>
