--- a/HTML/2016-2017.html
+++ b/HTML/2016-2017.html
@@ -14,8 +14,8 @@ Le joueurs peut decider du nombre de héros dans son equipe parmis 17 héros dif
 <br>De plus le jeu peut se jouer en JcJ avec un ami ou bien laisser l'ordinateur joué tout seul avec un système d'IA.</p>
 <p>Lien vers le rapport PDF de donjons et dragon <a href="../IMG/rapport.pdf">ici</a></p>
 <br>
-<img src="../IMG/D&D.png" alt="Choix des héros"width="65%" height="25%"class="center" >
-<img src="../IMG/StatD&D.png" alt="Stats des héros disponibles."width="65%" height="25%"class="center">
+<img src="../IMG/D_D.png" alt="Choix des héros"width="65%" height="25%"class="center" >
+<img src="../IMG/StatD_D.png" alt="Stats des héros disponibles."width="65%" height="25%"class="center">
 </body>
 <footer>
 <button><a href="../index.html">Retour à l'accueil</a></button>
