--- a/HTML/2020-2021.html
+++ b/HTML/2020-2021.html
@@ -8,17 +8,26 @@
 
 <h1> 2020-2021 </h1>
 <h3>Jeu de societe : Magic Di Rosa</h3>
-<!--3 fichier dont le gdd et 2 img-->
+<p> Magic Di Rosa est un projet semestriel de creation de jeu de societe au sein de l'ETPA.L'objectif du projet et de recreer un jeu de societe existant en mixant un film et un artiste. En l'occurence j'ai eu Herve Di Rosa, artiste Setois et Porco Rosso un des film de Miyazaki. Les graphismes et les illustration ont ete entierement pense par moi et ont ete poli par un eleve en design graphique. 
+<br>Le GDD du jeu est disponible <a href="../IMG/GDD_Miyazaki_Porco_Rosso.pdf"> ici </a><br>
+<img src="../IMG/Résultat.png" alt="Présentation du résultat" width="49%" class="center"/>
+<img src="../IMG/Adaptation.png" alt="Adaptation des visuels" width="49%" class="center"/>
 
 <h3>Ataraxy </h3>
-<!--https://youtu.be/fs9OQuTnF1E-->
-<!--https://v3.globalgamejam.org/2021/games/ataraxy-2 -->
+<p>Ataraxy est un jeu de la GlobalGameJam 2021 dont le theme etait Perdu-Retrouve. Ataraxy est un jeu narratif dont le but est de collecter des artefacts, représentant chacun différentes émotions, pour atteindre l'ataraxie (la tranquillité de l'âme). Le game design qui comporte essentiellement 2 phases : le déplacement de l'âme du joueur dans une sorte de labyrinthe, et une phase plus technique, consistant à sonder une zone en 3 dimensions pour trouver l'artefact invisible. 
+<br> Un visuel du jeu est disponible ainsi que la <a href="https://v3.globalgamejam.org/2021/games/ataraxy-2"> version jouable </a> 
+<video class='center' width="800" controls>
+<source src="../IMG/Ataraxy.mp4" type="video/mp4">
 
 <h3>Lardon's Adventure</h3>
-<!--https://brieux.itch.io/lardons-adventure -->
-<!-- le gdd et le game concept -->
+<p>Lardon's Adventure est mon projet de fin de première année a l'ETPA, il s'agit de la création d'un plateformer format web a l'aide de Phaser 3(librairie JS). Le principe etait de reprendre des méchaniques et de s'inspirer de Mario Bros pour créer son propre jeu de plateforme. Ici le joueur a la possibilité de passer dans une seconde phase de gameplay ou il arrete le temps et ou il peut programmer ses propres compétence à l'aide de point de programmation.
+Le <a href="../IMG/GameConcept_Lardon_s Adventure.pdf">Game Concept</a> ainsi que le <a href="../IMG/GDD Lardon_s Adventure.pdf">GDD</a> sont disponible à la lecture. La version jouable est disponible sur <a href="https://brieux.itch.io/lardons-adventure"> Itch.io </a>   
+<img src="../IMG/ArtWork.jpg" alt="ArtWork Lardon" width="49%" class="center"/>
 
-<h3>Rec</3>
+<h3>Rec</h3>
+<p>Voici REC, un prototype de jeu réalisé par nos étudiants de 1ère année à Montpellier, dans le cadre de l'option "Création de jeu vidéo".
+L'objectif était de créer un jeu parfaitement jouable en 1 mois et demi, avec un début et une fin. À noter que la programmation, le level design et le sound design ont été réalisés par nos étudiants, tandis que les assets 3D et l'animation du clone viennent d'une librairie existante.
+Dans ce FPS teinté d'énigmes, le joueur se retrouve dans un laboratoire où il sert de cobaye. Le moindre de ses faits et gestes est enregistré par l'IA durant une période donnée. Puis, celle-ci crée un clone qui va reproduire les actions du joueur, dans le but d'aider ce dernier à résoudre des énigmes. Le temps jeu est approximativement de 25-30 min et correspond à la résolution de 7 énigmes (en plus du tutoriel).</p>
 <!--https://youtu.be/2Pe9-qL0NBg -->
 <!-- faire une build de rec et la mettre sur itch.io-->
 
