--- a/HTML/2020-2021.html
+++ b/HTML/2020-2021.html
@@ -8,35 +8,42 @@
 
 <h1> 2020-2021 </h1>
 <h3>Jeu de societe : Magic Di Rosa</h3>
-<p> Magic Di Rosa est un projet semestriel de creation de jeu de societe au sein de l'ETPA.L'objectif du projet et de recreer un jeu de societe existant en mixant un film et un artiste. En l'occurence j'ai eu Herve Di Rosa, artiste Setois et Porco Rosso un des film de Miyazaki. Les graphismes et les illustration ont ete entierement pense par moi et ont ete poli par un eleve en design graphique. 
+<p> Magic Di Rosa est un projet semestriel de creation de jeu de societe au sein de l'ETPA.L'objectif du projet et de recreer un jeu de societe existant en mixant un film et un artiste. En l'occurence j'ai eu Herve Di Rosa, artiste Setois et Porco Rosso un des film de Miyazaki. Les graphismes et les illustration ont ete entierement pense par moi et ont ete poli par un eleve en design graphique.
 <br>Le GDD du jeu est disponible <a href="../IMG/GDD_Miyazaki_Porco_Rosso.pdf"> ici </a><br>
-<img src="../IMG/RÈsultat.png" alt="PrÈsentation du rÈsultat" width="49%" class="center"/>
+<img src="../IMG/R√©sultat.png" alt="Pr√©sentation du r√©sultat" width="49%" class="center"/>
 <img src="../IMG/Adaptation.png" alt="Adaptation des visuels" width="49%" class="center"/>
 
 <h3>Ataraxy </h3>
-<p>Ataraxy est un jeu de la GlobalGameJam 2021 dont le theme etait Perdu-Retrouve. Ataraxy est un jeu narratif dont le but est de collecter des artefacts, reprÈsentant chacun diffÈrentes Èmotions, pour atteindre l'ataraxie (la tranquillitÈ de l'‚me). Le game design qui comporte essentiellement 2 phases : le dÈplacement de l'‚me du joueur dans une sorte de labyrinthe, et une phase plus technique, consistant ‡ sonder une zone en 3 dimensions pour trouver l'artefact invisible. 
-<br> Un visuel du jeu est disponible ainsi que la <a href="https://v3.globalgamejam.org/2021/games/ataraxy-2"> version jouable </a> 
+<p>Ataraxy est un jeu de la GlobalGameJam 2021 dont le theme etait Perdu-Retrouve. Ataraxy est un jeu narratif dont le but est de collecter des artefacts, repr√©sentant chacun diff√©rentes √©motions, pour atteindre l'ataraxie (la tranquillit√© de l'√¢me). Le game design qui comporte essentiellement 2 phases : le d√©placement de l'√¢me du joueur dans une sorte de labyrinthe, et une phase plus technique, consistant √† sonder une zone en 3 dimensions pour trouver l'artefact invisible.
+<br> Un visuel du jeu est disponible ainsi que la <a href="https://v3.globalgamejam.org/2021/games/ataraxy-2"> version jouable </a>
 <video class='center' width="800" controls>
 <source src="../IMG/Ataraxy.mp4" type="video/mp4">
 
 <h3>Lardon's Adventure</h3>
-<p>Lardon's Adventure est mon projet de fin de premiËre annÈe a l'ETPA, il s'agit de la crÈation d'un plateformer format web a l'aide de Phaser 3(librairie JS). Le principe etait de reprendre des mÈchaniques et de s'inspirer de Mario Bros pour crÈer son propre jeu de plateforme. Ici le joueur a la possibilitÈ de passer dans une seconde phase de gameplay ou il arrete le temps et ou il peut programmer ses propres compÈtence ‡ l'aide de point de programmation.
-Le <a href="../IMG/GameConcept_Lardon_s Adventure.pdf">Game Concept</a> ainsi que le <a href="../IMG/GDD Lardon_s Adventure.pdf">GDD</a> sont disponible ‡ la lecture. La version jouable est disponible sur <a href="https://brieux.itch.io/lardons-adventure"> Itch.io </a>   
+<p>Lardon's Adventure est mon projet de fin de premi√®re ann√©e a l'ETPA, il s'agit de la cr√©ation d'un plateformer format web a l'aide de Phaser 3(librairie JS). Le principe etait de reprendre des m√©chaniques et de s'inspirer de Mario Bros pour cr√©er son propre jeu de plateforme. Ici le joueur a la possibilit√© de passer dans une seconde phase de gameplay ou il arrete le temps et ou il peut programmer ses propres comp√©tence √† l'aide de point de programmation.
+Le <a href="../IMG/GameConcept_Lardon_s Adventure.pdf">Game Concept</a> ainsi que le <a href="../IMG/GDD Lardon_s Adventure.pdf">GDD</a> sont disponible √† la lecture. La version jouable est disponible sur <a href="https://brieux.itch.io/lardons-adventure"> Itch.io </a>
 <img src="../IMG/ArtWork.jpg" alt="ArtWork Lardon" width="49%" class="center"/>
 
 <h3>Rec</h3>
-<p>Voici REC, un prototype de jeu rÈalisÈ par nos Ètudiants de 1Ëre annÈe ‡ Montpellier, dans le cadre de l'option "CrÈation de jeu vidÈo".
-L'objectif Ètait de crÈer un jeu parfaitement jouable en 1 mois et demi, avec un dÈbut et une fin. ¿ noter que la programmation, le level design et le sound design ont ÈtÈ rÈalisÈs par nos Ètudiants, tandis que les assets 3D et l'animation du clone viennent d'une librairie existante.
-Dans ce FPS teintÈ d'Ènigmes, le joueur se retrouve dans un laboratoire o˘ il sert de cobaye. Le moindre de ses faits et gestes est enregistrÈ par l'IA durant une pÈriode donnÈe. Puis, celle-ci crÈe un clone qui va reproduire les actions du joueur, dans le but d'aider ce dernier ‡ rÈsoudre des Ènigmes. Le temps jeu est approximativement de 25-30 min et correspond ‡ la rÈsolution de 7 Ènigmes (en plus du tutoriel).</p>
-<!--https://youtu.be/2Pe9-qL0NBg -->
-<!-- faire une build de rec et la mettre sur itch.io-->
+<p>Voici REC, un prototype de jeu r√©alis√© par nos √©tudiants de 1√®re ann√©e √† Montpellier, dans le cadre de l'option "Cr√©ation de jeu vid√©o".
+L'objectif √©tait de cr√©er un jeu parfaitement jouable en 1 mois et demi, avec un d√©but et une fin. A noter que la programmation, le level design et le sound design ont √©t√© r√©alis√©s par nos √©tudiants, tandis que les assets 3D et l'animation du clone viennent d'une librairie existante.
+Dans ce FPS teint√© d'√©nigmes, le joueur se retrouve dans un laboratoire o√π il sert de cobaye. Le moindre de ses faits et gestes est enregistr√© par l'IA durant une p√©riode donn√©e. Puis, celle-ci cr√©e un clone qui va reproduire les actions du joueur, dans le but d'aider ce dernier √† r√©soudre des √©nigmes. Le temps jeu est approximativement de 25-30 min et correspond √† la r√©solution de 7 √©nigmes (en plus du tutoriel).</p>
+<p><a href="https://youtu.be/2Pe9-qL0NBg"> Vid√©o du gameplay globale </a></p>
+<img src="../IMG/RecLogo.png" alt="Logo REC" width="25%" class="center"/>
+<img src="../IMG/RecIG.png" alt="InGame REC" width="49%" class="center"/>
+<img src="../IMG/LoadingRec.png" alt="Loading REC" width="49%" class="center"/>
 
 <h3>Mutegg</h3>
-<!--https://stingart.itch.io/mutegg-->
+
+<p>Mutegg est un jeu cr√©e pendant une Game Jam inter campus de mon √©cole. Le th√®me √©tait "Communiquer sans parler". L'objectif √©tait de faire un jeu fun d√®s la premi√®re seconde de gameplay. Pour ce faire nous avons d√©cid√© de faire un jeu en √©cran scind√© deux joueurs. </p>
+<p>Toute la partie programmation √©tait √† ma charge tandis que mes co√©quipier ce sont occup√© du level design, level art, game design et narration. Le joueur incarne un chef d'entreprise qui doit ramerer ses salari√© travailler dans les salles de r√©union. Pour ce faire il dispose de trois actions : il peut montrer la direction pour avoir une influence sur les salari√© qui ont des yeux. Il peut clapper des main pour appeler les employ√©s qui ont des oreille ou alors p√©ter pour faire fuire ceux qui sentent</p>
+<p><a href="https://stingart.itch.io/mutegg"> Le jeu est t√©l√©chargeble ici </a></p>
+<img src="../IMG/Mutegg.jpg" alt="Icon Mutegg" width="49%" class="center"/>
+<img src="../IMG/IGMutegg.jpg" alt="IN Game Mutegg" width="49%" class="center"/>
 
 
 </body>
 <footer>
-<button><a href="../index.html">Retour ‡ l'accueil</a></button>
+<button><a href="../index.html">Retour √† l'accueil</a></button>
 </footer>
 </html>
