--- a/HTML/2021-2022.html
+++ b/HTML/2021-2022.html
@@ -10,13 +10,41 @@
 <h3>L'Arbre Blanc : Le Jeu</h3>
 <p>L'Arbre Blanc : Le Jeu est le projet de premier trimestre de l'ETPA. Il s'agit d'un serious game crée par Corentin HABIB et moi-même. La consigne était de prendre un bâtiment, un lieu touristique de Montpellier et d'en faire un serious game pour enfant âgé entre 8 et 12 ans sur mobile. Notre choix s'est porté sur l'arbre blanc, célèbre bâtiment de Montpellier grâce a son architecture. L'objectif du jeu était de retransmettre le côté déroutant et puzzle du bâtiment dans le jeu. Pour se faire le bâtiment à été modéliser en entier pour ensuite le casser en plusieurs morceaux qui serviraient de pièce de puzzle. Le jeu se joue sur Android et est développé sur Unity. Pas mal de contraintes ont donc était imposées : un élément riggable dans le jeu (notre bâtiment), des informations au fur et à mesure de l'avancé ainsi que une documentation approfondie en amont.</p>
 <p>Le walkthough complet du jeu est <a href="../IMG/Walkthrough_AB.pdf"> disponible à la lecture </a></p>
+<iframe class='center'width="1268" height="713" src="https://www.youtube.com/embed/4zaqhVgn4I0" title="Video Gameplay AB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p><a href="../IMG/Arbre_blanc.zip"> Le jeu est disponible ici </a></p>
 
 <h3>Traffic Car Traffic Road</h3>
-<p> Traffic Car Traffic Road est un jeu crée en une journée </p>
+<p> Traffic Car Traffic Road est un jeu crée en une journée dont l'objectif était de créer à l'aide d'Unity un jeu "Hyper-casual" pour montrer la rapidité de création si l'on veut faire de ce style de jeu notre cible. Le jeu s'insipire donc des jeux phare du playStore et appStore.
+ Il s'agit d'un jeu avec un seul contrôle : le touch. Il permet de déplacer sa voiture le long d'un guide préétablis par les levels Designers. Le joueur doit choisir les bons timings pour ne pas avoir d'accident.</p>
+<p><a href="https://thazerr.itch.io/trafficcartrafficroad"> Le jeu est disponible ici </a>| Utilisant WebGL le jeu est jouable directement sur navigateur.</p>
+<img src="../IMG/TrafficCar.png" alt="trafficcartrafficroad in game" width="25%" class="center"/>
+
 <h3>Runic Golem</h3>
+<p>Runic Golem est ma 3ème participation à la GlobalGameJam le thème étant cette année là : Dualité. Nous avons voulu faire un jeu de réflexion s'inspirant sur certain points des échecs. En effet le joueur incarne un jeune magicien qui navigue sur des îles volantes autour d'un vortex géant. Le vortex géant invoque des golems élémentaire que le mage doit combattre. Pour ce faire il se deplacera d'île en île pour récuperer des runes et lancer de puissant sortilèges. L'objectif du joueur est de préparer ses coups à l'avance au tour par tour pour combattre efficacement les hordes d'ennemis. Lors de cette game jam nous étions une équipe de 6 participants et nous avons tout créer de A à Z en passant par les musiques ainsi que les modèle 3D. Le jeu est fait sous Unreal5 pour profiter de toutes les nouvelles technologie tels que Lumen ou encore Nanite.
+<br>
+<br>Le jeu est jouable <a href="https://vinek.itch.io/runic-golems"> ici </a></p>
+<br>
+<img src="../IMG/IGRG.png" alt="In Game Runic Golem" width="25%" class="center"/>
+<img src="../IMG/creditRG.png" alt="crédit Runic Golem" width="25%" class="center"/>
+
 <h3>Opéra Tosca</h3>
+<p> Opéra Tosca est un projet professionel missioné par l'Opéra de Montpellier. L'objectif est de mettre en lumière la création de jeu vidéo en lien avec l'Opéra. Nous avons travaillé sur Tosca de Giacomo Puccini. Pour nous le coeur du jeu était de mettre en avant la musique et de mettre en valeur la lutte de la cantatrice contre son antagoniste le Baron. Nous avons voulu pour relever ce défi un jeu de rythme qui rejouera tout le second acte de la pièce.Et cela, en usant de son habileté à la manette pour suivre la courbe de chant de son avatar.</p>
+<br>
+<img src="../IMG/LogoTosca.png" alt="Logo Tosca" width="25%" class="center"/>
+<img src="../IMG/beginTosca.png" alt="Begin Tosca" width="25%" class="center"/>
+<img src="../IMG/IGTosca.png" alt="In Game Tosca" width="25%" class="center"/>
+<br>
+<p>Le jeu à était felicité par l'équipe d'encadrement ainsi que par le commanditaire : l'Opéra National de Montpellier</p>
+<p>Le lien pour y jouer est <a href="https://romain-coutellier.itch.io/opera-tosca"> sur Itch.io </a></p>
+
 <h3>Armistice</h3>
+<p>Armistice est un jeu crée lors de la Game Jam annuel inter Campus de l'ETPA. Cette année le thème était 'Guerre et Paix'. Mon équipe et moi-même avons décider de faire incarner au joueur un soldat français emissaire de la paix la veille de l'Armistice. Son objectif est de faire parvenir au Commandemant les ordres de cessez le feu avant la fin de la journée sachant que l'Armistice sera signée le lendemain. Il devra donc slalomer entre mines, bombes et tirs de mittrailleuse en se cachant dans les différents cratères d'obus ainsi que dans les tranchées. Le jeu est développé de A à Z par notre équipe et est créer sous Unreal Engine. Nous avons sur ce projet décidé de mettre en place certaines méchaniques de polish tels que la tête du héros qui est attiré vers des points d'interets le long de sa course. Ainsi que des traces de pas et de boue dans les tranchées. L'animation à était faite via Plask, une IA de création d'animation sur Rig Mixamo Compatible.
+</p>  <p><br> Le jeu est disponible via <a href="https://loulaty.itch.io/armistice"> ce lien </a></p>
+<img src="../IMG/1Armistice.png" alt="In Game Armistice" width="25%" class="center"/>
+<img src="../IMG/2Armistice.png" alt="In Game Armistice" width="25%" class="center"/>
+<img src="../IMG/3Armistice.png" alt="In Game Armistice" width="25%" class="center"/>
+<img src="../IMG/cerditArmistice.jpg" alt="Crédit Armistice" width="25%" class="center"/>
+
 <h3>Two</h3>
 <h3>Dice Of God</h3>
 
