two - dice of god

--- a/HTML/2021-2022.html
+++ b/HTML/2021-2022.html
@@ -46,7 +46,22 @@
 <img src="../IMG/cerditArmistice.jpg" alt="Crédit Armistice" width="25%" class="center"/>
 
 <h3>Two</h3>
+<p>Two est un jeu d'horreur crée dans le cadre du projet de second semestre de la deuxième année à l'ETPA. Il s'agit d'un jeu complet d'une trentaine de minutes fait sous Unreal5. Le joueur incarne un ingénieur spatiale qui doit aller réparer une station laboratoire. Lors de son arrivé l'ambiance et le manque de personnel commencera à l'inquieter. Le joueur alternera entre zone avec et sans gravité. Il devra brancher des cables pour réparer l'éléctricité dans la station. Le jeu est developpé dans une durée de 3 mois avec une équipe de 5 personnes. Je me suis personnelement occupé de la programmation gameplay ainsi que du producing du projet. Le <a href="../IMG/GDD Two.pdf">GDD</a> est disponible à la lecture. Le monstre du jeu est notamment créer, sculplté, riggé et animé par nos soins. Nous avons utilisé notamment la motion capture pour la plupart des animations.
+<br>
+<br> Le jeu est jouable <a href="https://falty.itch.io/two"> ici </a></p>
+<iframe class="center" width="500" height="400" src="https://www.youtube.com/embed/AE5eHEwzgsU" title="Trailer - TWO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+<img src="../IMG/IGTwo.png" alt="In Game Two" width="25%" class="center"/>
+<img src="../IMG/IGTwo2.png" alt="In Game Two" width="25%" class="center"/>
+
 <h3>Dice Of God</h3>
+<p> Dans le cadre de la GMTK 2022 dont le thème était : Roll Of Dice. Nous avons créer à deux avec un ami Dice Of God. Il s'agit d'un petit jeu fait sous Unreal 5 où le joueur incarne un dieu qui doit protéger son village façe aux hordes d'ennemis. Il devra utiliser son lance-pierre pour lancer les dès à travers la carte pour viser les ennemis. Si les ennemis ne meurt pas du premier coup le joueur peut compter sur la magie invoquer par les faces du dès pour lancer de puissants sortilèges. Le joueur à la possibilité d'aller voir le forgeron pour modifier son dès au long de la partie.
+<br> <br>
+Le jeu est téléchargeable sur <a href="https://thazerr.itch.io/dice-of-god"> itch.io </a></p>
+<br>
+<img src="../IMG/screen5.jpg" alt="In Game DOG" width="25%" class="center"/>
+<img src="../IMG/screen3.png" alt="In Game DOG" width="25%" class="center"/>
+<img src="../IMG/screen1.png" alt="Logo DOG" width="25%" class="center"/>
 
 </body>
 <footer>
