--- a/HTML/2022-2023.html
+++ b/HTML/2022-2023.html
@@ -12,12 +12,12 @@
         Overcracked est un jeu crée pour la Gacha 2022
         Crée avec une équipe de 10 personnes totalement inconnues, je me suis occupé de toute l'intégration (animation, son, effet spéciaux, mesh et création de BP lié au mesh).
     </p>
-    <p>Le jeu est un jeu multijoueur local développé sur Unreal 5 où les deux joueurs incarne des kangouroo qui doivent crée de la drogue dans leur van à la manière d'Overcooked</p>
+    <p>Le jeu est un jeu multijoueur local développé sur Unreal 5 où les deux joueurs incarnent des kangouroos qui doivent créer de la drogue dans leur van à la manière d'Overcooked</p>
     <br>
     <p><a href="https://thazerr.itch.io/overcracked"> Le jeu est disponible ici </a></p>
     <img src="../IMG/OvercrackedInGame.png" alt="In Game Overcraked" width="25%" class="center" />
     <img src="../IMG/Overcracked.png" alt="Lore Overcracked" width="25%" class="center" />
-    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/watch?v=2N4U7UcYeN0" title="Video Gameplay Overcracked" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/2N4U7UcYeN0" title="Video Gameplay Overcracked" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     <br>
 
@@ -28,7 +28,7 @@
     <p><a href="https://thazerr.itch.io/mangroot"> Le jeu est disponible ici </a></p>
     <img src="../IMG/MenuMangroot.png" alt="Menu Mangroot" width="25%" class="center" />
     <img src="../IMG/IGMangroot.png" alt="InGame Mangroot" width="25%" class="center" />
-    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/watch?v=2pG4Dv8w9hg" title="Video Gameplay Mangroot" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/2pG4Dv8w9hg" title="Video Gameplay Mangroot" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
 
 </body>
