--- a/HTML/2015-2016.html
+++ b/HTML/2015-2016.html
@@ -18,6 +18,9 @@ Nous pouvons par la suite à l'aide d'un espace sécurisé et personnel acceder 
 <img src="../IMG/Renommage.png" alt="Sauvegarde du mot de passe et libellé"width="24%" height="50%">
 <br>
 </body>
+<footer class="layout">
+    <p>BLUEPRINT</p>
+</footer>
 <footer>
 <button><a href="../index.html">Retour à l'accueil</a></button>
 </footer>
