--- a/HTML/2017-2018.html
+++ b/HTML/2017-2018.html
@@ -45,6 +45,9 @@ Mon role dans ce projet etait de créer une version clean qui servait de correct
 <img src="../IMG/2048End.png" alt="Ecran fin de jeu"width="32%" height="12%" >
 <br>
 </body>
+<footer class="layout">
+    <p>BLUEPRINT</p>
+</footer>
 <footer>
 <button><a href="../index.html">Retour à l'accueil</a></button>
 </footer>
