--- a/HTML/2018-2019.html
+++ b/HTML/2018-2019.html
@@ -51,6 +51,9 @@ Your browser does not support HTML5 video.
 <p> J'ai aussi crée cette année mon portfolio sous la forme d'un site web, crée sans template. Le lien du site est disponible <a href="../index.html"> ici</a> </p>
 <img src="../IMG/PortfolioInside.png" alt="Image de l'index du portfolio" class="center"/>
 </body>
+<footer class="layout">
+    <p>BLUEPRINT</p>
+</footer>
 <footer>
 <button><a href="../index.html">Retour à l'accueil</a></button>
 </footer>
