--- a/HTML/2021-2022.html
+++ b/HTML/2021-2022.html
@@ -8,7 +8,7 @@
 
 <h1> 2020-2021 </h1>
 <h3>L'Arbre Blanc : Le Jeu</h3>
-<p>L'Arbre Blanc : Le Jeu est le projet de premier trimestre de l'ETPA. Il s'agit d'un serious game crée par Corentin HABIB et moi-même. La consigne était de prendre un bâtiment ou un lieu touristique de Montpellier et d'en faire un serious game pour enfant âgé entre 8 et 12 ans sur mobile. Notre choix s'est porté sur l'Arbre Blanc, célèbre bâtiment de Montpellier grâce a son architecture. L'objectif du jeu était de retrouver l'Arbre Blanc en retransmettant le côté déroutant de son architecture en reinterpretant le celebre jeu du puzzle. Pour se faire le bâtiment à été modéliser en entier pour ensuite le casser en plusieurs morceaux qui serviraient de pièces de puzzle. Le jeu se joue sur Android et est développé sur Unity. Pas mal de contraintes ont donc était imposées : un élément riggeable dans le jeu (notre bâtiment), des informations au fur et à mesure de l'avancé ainsi qu'une documentation approfondie en amont.</p>
+<p>L'Arbre Blanc : Le Jeu est le projet de premier trimestre de l'ETPA. Il s'agit d'un serious game crée par Corentin HABIB et moi-même. La consigne était de prendre un bâtiment ou un lieu touristique de Montpellier et d'en faire un serious game pour enfant âgé de 8 à 12 ans sur mobile. Notre choix s'est porté sur l'Arbre Blanc, célèbre bâtiment de Montpellier par son architecture. L'objectif du jeu était de retrouver l'Arbre Blanc en retransmettant le côté déroutant de son architecture par une reinterpretation du celebre jeu de puzzle. Pour se faire le bâtiment à été modéliser en entier pour ensuite le casser en plusieurs morceaux qui serviraient de pièces de puzzle. Le jeu se joue sur Android et est développé sur Unity. Pas mal de contraintes ont donc était imposées : un élément riggeable dans le jeu (notre bâtiment), des informations au fur et à mesure de l'avancé ainsi qu'une documentation approfondie en amont.</p>
 <p>Le walkthough complet du jeu est <a href="../IMG/Walkthrough_AB.pdf"> disponible à la lecture </a></p>
 <iframe class='center'width="1268" height="713" src="https://www.youtube.com/embed/4zaqhVgn4I0" title="Video Gameplay AB" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <p><a href="../IMG/Arbre_blanc.zip"> Le jeu est disponible ici </a></p>
@@ -64,6 +64,9 @@ Le jeu est téléchargeable sur <a href="https://thazerr.itch.io/dice-of-god"> i
 <img src="../IMG/screen1.png" alt="Logo DOG" width="25%" class="center"/>
 
 </body>
+<footer class="layout">
+    <p>BLUEPRINT</p>
+</footer>
 <footer>
 <button><a href="../index.html">Retour à l'accueil</a></button>
 </footer>
