--- a/HTML/2022-2023.html
+++ b/HTML/2022-2023.html
@@ -32,6 +32,9 @@
     <br>
 
 </body>
+<footer class="layout">
+    <p>BLUEPRINT</p>
+</footer>
 <footer>
 <button><a href="../index.html">Retour à l'accueil</a></button>
 </footer>
