--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <link rel="stylesheet" href="./CSS/style.css" />
 <title>Portfolio Brieux CAQUELIN</title>
 </head>
+<footer class="layout">
+    <p>BLUEPRINT</p>
+</footer>
 <body>
 
 <h1>Bienvenue sur mon Portfolio</h1>
-<p>Ici je vais presenter tous les projets sur lesquels j'ai participé ainsi que mes futurs projets.</p>
+<p>Ici je vais presenter tous les projets auxquels j'ai participé mais également mes futurs projets.</p>
 <div class="center">
 <button class="center">
   <a href="HTML/2022-2023.html">2022-2023</a></button> <button class="center">
@@ -19,7 +22,7 @@
   <a href="HTML/2015-2016.html">2015-2016</a></button> <button class="center">
   <a href="HTML/Futurs_projets.html">Futurs projets</a></button>  <br>
 </div>
-<p> Ainsi que mes autres créations externes aux jeux vidéos. </p>
+<p> Ainsi que mes autres créations. </p>
 <button class="center"><a href="HTML/Autres_créations.html">Autres cr&eacute;ations</a></button>
 </body>
 </html>
