--- a/HTML/2020-2021.html
+++ b/HTML/2020-2021.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="../CSS/style.css" />
 <title>2020-2021</title>
 </head>
+
 <body>
 
 <h1> 2020-2021 </h1>
@@ -41,6 +42,9 @@ Dans ce FPS teinté d'énigmes, le joueur se retrouve dans un laboratoire où il
 <img src="../IMG/Mutegg.jpg" alt="Icon Mutegg" width="49%" class="center"/>
 <img src="../IMG/IGMutegg.jpg" alt="IN Game Mutegg" width="49%" class="center"/>
 </body>
+<footer class="layout">
+    <p>BLUEPRINT</p>
+</footer>
 <footer>
 <button><a href="../index.html">Retour à l'accueil</a></button>
 </footer>
