--- a/HTML/Autres_créations.html
+++ b/HTML/Autres_créations.html
@@ -32,6 +32,9 @@
 <img src="../IMG/Moutons.png" alt="sheepCounter" width="49%" class="center"/>
 <br>
 </body>
+<footer class="layout">
+    <p>BLUEPRINT</p>
+</footer>
 <footer>
 <button><a href="../index.html">Retour à l'accueil</a></button>
 </footer>
