--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 
 <h1>Bienvenue sur mon Portfolio</h1>
 <p>Ici je vais presenter tous les projets auxquels j'ai participé mais également mes futurs projets.</p>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/SZk0ehRPyec" title="Gameplay Programmer DemoReel 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<br>
+
+</body>
+<footer class="layout">
+    <p>BLUEPRINT</p>
+</footer>
+<footer>
+<button><a href="../index.html">Retour à l'accueil</a></button>
+</footer>
+</html>
+
 <div class="center">
 <button class="center">
   <a href="HTML/2022-2023.html">2022-2023</a></button> <button class="center">
