premiere maj du portfolio 2023 il faut integrer les video et visuel de HOTA

--- a/HTML/2022-2023.html
+++ b/HTML/2022-2023.html
@@ -7,6 +7,20 @@
 <body>
 
     <h1> 2022-2023 </h1>
+
+    <h3>Heart of the Abyss</h3>
+    <p>
+        Heart of the Abyss (ou HOTA) est mon jeu de fin d'étude. Développé avec une équipe de 7 personnes nous avons travaillé sur le projet durant 10 mois.
+    </p>
+    <p>HOTA est un jeu ou le joueur incarne le SeaWatcher, le gardien des océans et il doit combattre une corruption qui ronge les abysses. Je me suis occupé de toute la partie programmation que ce soit gameplay, tool ou UI ainsi que de l'intelligence artificiel du boss du jeu. </p>
+    <br>
+    <p><a href="https://thazerr.itch.io/overcracked"> Le jeu est disponible ici </a></p>
+    <img src="../IMG/OvercrackedInGame.png" alt="In Game Overcraked" width="25%" class="center" />
+    <img src="../IMG/Overcracked.png" alt="Lore Overcracked" width="25%" class="center" />
+    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/2N4U7UcYeN0" title="Video Gameplay Overcracked" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <br>
+
     <h3>Overcracked</h3>
     <p>
         Overcracked est un jeu crée pour la Gacha 2022
@@ -28,13 +42,35 @@
     <p><a href="https://thazerr.itch.io/mangroot"> Le jeu est disponible ici </a></p>
     <img src="../IMG/MenuMangroot.png" alt="Menu Mangroot" width="25%" class="center" />
     <img src="../IMG/IGMangroot.png" alt="InGame Mangroot" width="25%" class="center" />
-    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/2pG4Dv8w9hg" title="Video Gameplay Mangroot" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/2pG4Dv8w9hg" title="Video Gameplay Akasha" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
 
+    <h3>Akasha</h3>
+    <p>
+        Akasha est un jeu crée durant une game jam regroupant des 1ère, 2nde et 3ème années à l'ETPA
+    </p>
+    <p>Il s'agit de ma première expérience avec la VR j'ai donc du le temps de la jam me familiariser avec le système et implémenter les méchaniques liées au gameplay.</p>
+    <br>
+    <p><a href="https://vinek.itch.io/akasha"> Le jeu est téléchargeable ici et nécéssite un casque VR </a></p>
+    <img src="../IMG/AfficheAkasha.png" alt="ShowAkasha" width="25%" class="center" />
+    <img src="../IMG/menuAkasha.jpg" alt="Lore Overcracked" width="25%" class="center" />
+    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/c-LAF8yfOKU?list=PLS6r3g3D6TLA-KY4aXZM8od7iCiuLYGm2" title="Video Gameplay Overcracked" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <br>
+
+    <h3>Fourmiz</h3>
+    <p>
+        Fourmiz est un jeu crée à l'occasion de la game jam Inter-Ecole ETPA
+    </p>
+    <p>Nous avons pour ce projet utilisé le plugin voxel d'Unreal car nous voulions avoir une direction artistique forte et avec une vraie cohérence graphique. Il s'agit d'un jeu bac à sable où le joueur doit détruire une fourmilière à l'aide de ses bombes. Tout un système d'achievement est implémenté dans le jeu en fonction des éléments détruit par le joueur. </p>
+    <br>
+    <p><a href="https://thazerr.itch.io/fourmiz"> Le jeu est téléchargeable ici</a></p>
+    <img src="../IMG/AfficheFourmiz.png" alt="Showoff Fourmiz" width="25%" class="center" />
+    <img src="../IMG/IGFourmiz.png" alt="in game view" width="25%" class="center" />
+    <iframe class='center' width="1268" height="713" src="https://www.youtube.com/embed/iC9NLUMKQS4?list=PLS6r3g3D6TLA-KY4aXZM8od7iCiuLYGm2" title="Video Gameplay Overcracked" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <br>
 </body>
-<footer class="layout">
-    <p>BLUEPRINT</p>
-</footer>
+
 <footer>
 <button><a href="../index.html">Retour à l'accueil</a></button>
 </footer>
